# smart-search

./: .gitignore  ALIBABA.md  CHANGELOG.md  CLAUDE.md  COMMIT_MESSAGE.md  DEEPSEEK.md  DUPLICATE-KEY-FIX.md  FIXED-ISSUES.md  IMPLEMENTATION_SUMMARY.md  Instructions to claude.md  KIMI.md  LICENSE  LLAMA_3.md  MINIMAX.md  OPENAI.md  PERPLEXITY.md  PUBLISHING.md  QUICK-START.md  QWEN_2_5.md  README.md  SCRIPTS.md  SEEDING-FIX.md  SHOWCASE-SCRIPTS.md  SUPABASE-SETUP.md  analysis.md  choose-dataset.sh  eslint.config.js  generate-screenshots.js  global-ai-model-instructions  package-lock.json  package.json  playwright.config.js  playwright.config.ts  providers-capabilities.md  run-large-dataset.sh  run-medium-dataset.sh  run-postgres-redis-showcase.sh  run-showcase.sh  run-small-dataset.sh  stop-conflicting-services.sh  (+8 more)
blog/: benchmarking-guide.md  community-roadmap.md  community-showcase.md  data-hydration-guide.md  deltalake-redis-showcase.md  development-guide.md  easiest-way-to-test-smart-search.md  live-data-ingestion-config.md  mongodb-memcached-showcase.md  mysql-dragonfly-showcase.md  open-source-benefits.md  postgres-redis-showcase.md  screenshot-automation-guide.md  screenshot-generator-junior-developers.md  security-guide.md  smart-search-global-platforms.md  smart-search-homepage.md  smart-search-junior-developers.md  smart-search-senior-developers.md  smart-search-testers.md  sqlite-inmemory-showcase.md
config-examples/: .env.example  mongodb-dragonfly.config.yaml  mysql-redis.config.json  redis-cloud-api-key.config.json  smart-search.config.json  smart-search.config.yaml  upstash-redis.config.json
config/providers/: deltalake-redis-analytics.yaml  mongodb-memcached-retail.yaml  mysql-dragonfly-finance.yaml  mysql-dragonfly-healthcare.yaml  postgres-redis-finance.yaml  postgres-redis-healthcare.json  postgres-redis-healthcare.yaml  supabase-redis-education.yaml
docker/: all-scenarios.docker-compose.yml  base.docker-compose.yml  deltalake-redis.docker-compose.yml  docker-compose.yml  mongodb-memcached.docker-compose.yml  mongodb-memcached.yml  mysql-dragonfly.docker-compose.yml  mysql-dragonfly.yml  postgres-redis-alt-ports.docker-compose.yml  postgres-redis.docker-compose.yml  postgres-redis.yml  showcase.Dockerfile  supabase-redis.docker-compose.yml
docker/config/: prometheus.yml  redis.conf
docker/deltalake/: Dockerfile  processor.py  requirements.txt
docker/envs/: mysql-dragonfly-finance-medium.env  mysql-dragonfly-retail-small.env  postgres-redis-finance-large.env  postgres-redis-healthcare-large.env  postgres-redis-healthcare-medium.env  postgres-redis-healthcare-small.env  screenshot-postgres-redis-healthcare-small.env
docker/monitoring/: prometheus.yml
docker/nginx/: nginx.conf
docs/: CHANGELOG.md  PRD-Blog-Modernization.md  PRD.md  PRD.md.original  TDD.md
docs/diagrams/: component-architecture.mmd  data-flow.mmd  system-architecture.mmd
docs/supabase/: SMART_SEARCH_GUIDE.md
examples/: advanced-configuration.ts  basic-usage.ts  multiple-databases.ts  supabase-production.js
examples/supabase-edge-function/: index.ts
languages/python/: pyproject.toml
languages/python/smart_search/: __init__.py
languages/python/smart_search/core/: smart_search.py  types.py
languages/python/smart_search/providers/: __init__.py  postgresql.py
schemas/postgres-redis/: healthcare-postgres.sql
scripts/: benchmark.sh  clear-data.sh  docker-dev.sh  download-data.sh  generate-screenshots-docker.sh  publish-to-github.sh  publish-to-npm.sh  seed-data.sh  smart-search-setup.sh  start-all-scenarios.sh  stop-all-scenarios.sh  sync-data.sh  test-config.js  test-publish.sh  test-showcase.sh  test-universal-system.sh  validate-config.js  validate-package.ts
scripts/common/: dataset-helpers.sh  docker-helpers.sh  port-management.sh
scripts/data-schemas/: education.json  finance.json  healthcare.json  real-estate.json  retail.json  universal-schema.json
scripts/platform-setup/: lovable-setup.sh  replit-setup.sh  windsurf-setup.sh
scripts/transformers/: mongodb-transformer.js  mysql-transformer.js  postgres-transformer.js
showcases/: README.md
showcases/delta-redis-data-governance/: README.md  docker-compose.yml  env.example
showcases/deltalake-redis/: Dockerfile  app.js  package.json
showcases/deltalake-redis-data-governance/: delta_redis_data_governance_prompt.md  prd.md
showcases/mongodb-memcached/: Dockerfile  app.js  package-lock.json  package.json  smart-search.config.json
showcases/mysql-dragonfly/: Dockerfile  app.js  package-lock.json  package.json  smart-search.config.json
showcases/postgres-redis/: Dockerfile  app.js  package-lock.json  package.json
showcases/sqlite-inmemory/: app.js  package-lock.json  package.json  smart-search.config.json
showcases/supabase-redis/: Dockerfile  app.js  package.json
src/: SmartSearch.ts  SmartSearchFactory.ts  index.ts  types.ts
(+85 files in other folders)
